<resources>
    <string name="app_name">NutriQuiz</string>
    <string name="btnLearn">LEARN</string>
    <string name="btnQuiz">QUIZ</string>
    <string name="nutriQuiz">NutriQuiz</string>
    <string name="btnSettings">Settings</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="volume">Volume</string>
    <string name="btnVitaminC">VitaminC</string>
    <string name="btnProtein" />
    <string name="proteinIntro" />
    <string name="learning">Nutrient</string>
    <string name="vitaminDesc">To vitamin module</string>
    <string name="proteinDesc">To protein module</string>
    <string name="carbohydateDesc">To carbohydrate module</string>
    <string name="fiberDesc">To dietary fiber module</string>
    <string name="fatDesc">To fat module</string>
    <string name="waterDesc">To water module</string>
    <string name="mineralDesc">To mineral module</string>
    <string name="pyramidDesc">To pyramid module</string>
    <string name="proteinFunction">Protein function button</string>
    <string name="proteinFood">Protein food button</string>
    <string name="carbohydrateFunction">Carbohydrate function button</string>
    <string name="carbohydrateFood">Carbohydrate food button</string>
    <string name="proteinText">Protein</string>
    <string name="btnNext">Next button</string>
    <string name="waterText">Water</string>
    <string name="waterFunction">Water function button</string>
    <string name="waterFood">Water food button</string>
    <string name="vitaminText">Vitamin</string>
    <string name="vitaminFunction">Vitamin function button</string>
    <string name="vitaminFood">Vitamin food button</string>
    <string name="carbohydrateText">Carbohydrate</string>
    <string name="fatText">Fat</string>
    <string name="fatFunction">Fat function button</string>
    <string name="fatFood">Fat food button</string>
    <string name="mineralText">Mineral</string>
    <string name="mineralFunction">Mineral function button</string>
    <string name="mineralFood">Mineral food button</string>
    <string name="fiberText">Dietary Fiber</string>
    <string name="fiberFunction">Fiber function button</string>
    <string name="fiberFood">Fiber food button</string>
    <string name="foodPyramidText">Food Pyramid</string>
    <string name="foodPyramidBtn">Food pyramid button</string>
    <string name="quizLoginText">Quiz Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnLogin">Login</string>
    <string name="passwordIcon">Password icon</string>
    <string name="emailIcon">Email icon</string>
    <string name="passwordHint">Password</string>
    <string name="emailHint">Email</string>
    <string name="quizRegisterText">Quiz Register</string>
    <string name="quizText">Quiz</string>
    <string name="questionText">Question Text</string>
    <string name="option1">Yes</string>
    <string name="option2">No</string>
    <string name="congratsText">Congratulation!</string>
    <string name="yourScore">Your score: </string>
    <string name="leaderboardText">Leaderboard</string>
    <string name="btnLeaderboard">LEADERBOARD</string>

</resources>