<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/learning_background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="500dp"
        android:fontFamily="@font/comicsans"
        android:text="@string/quizRegisterText"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:src="@drawable/email"
        android:contentDescription="@string/emailIcon"
        app:layout_constraintBottom_toBottomOf="@+id/emailRegisterTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emailRegisterTxt"
        app:layout_constraintVertical_bias="0.421" />

    <EditText
        android:id="@+id/emailRegisterTxt"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegisterTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/register" />

    <EditText
        android:id="@+id/passwordRegisterTxt"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginBottom="428dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:autofillHints="password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/password" />

    <ImageView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:src="@drawable/password"
        android:contentDescription="@string/passwordIcon"
        app:layout_constraintBottom_toBottomOf="@+id/passwordRegisterTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passwordRegisterTxt"
        app:layout_constraintVertical_bias="0.421" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#F6BE00"
        android:fontFamily="@font/comicsans"
        android:onClick="onClickRegisterBtn"
        android:text="@string/btnRegister"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterTxt" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ffffd4"
        android:onClick="onClickBackBtn"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

</androidx.constraintlayout.widget.ConstraintLayout>